--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,8 @@
-@use '/src/assets/scss/vars.scss';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import 'assets/scss/vars.scss';
 
 * {
   box-sizing: border-box;
@@ -23,11 +27,10 @@ html {
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: $bg-default;
+  color: $white;
 }
 
 code {
